# WalletKit

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md
WalletKit/RustFramework.xcframework/: Info.plist
WalletKit/RustFramework.xcframework/macos-arm64_x86_64/headers/RustFramework/: module.modulemap  walletkitFFI.h
WalletKit/Sources/WalletKit/: walletkit.swift
src/: address_validator.rs  alloy_client.rs  alloy_wallet.rs  erc20.rs  error.rs  ethereum_address.rs  evm_keys.rs  keystore.rs  lib.rs  lib.udl  mnemonic.rs  mod.rs  runtime.rs  signature_scheme.rs  sui_address.rs  sui_client.rs  sui_coin_metadata.rs  sui_wallet.rs  trezor.rs
src/sui/: keystore.rs  mod.rs  runtime.rs  signature_scheme.rs
src/types/: error.rs
