[package]
name = "walletkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]
name = "walletkit"

[dependencies]
alloy = { version = "1.6.3", features = ["full", "signer-keystore", "signer-mnemonic", "signer-trezor"] }
alloy-primitives = "1.5.6"
bcs = "0.1.4"
bip32 = "0.4.0"
bip39 = "2.2.2"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "db643fd05a1b1c4cd52de3939766b53e12ce137e" }
# hex = "0.4.3"
k256 = "0.13.4"
serde_json = "1.0.149"
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
tokio = "1.49.0"
trezor-client = "0.1.5"
uniffi = "0.30"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-mmacosx-version-min=15.0"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-mmacosx-version-min=15.0"]
